components/ScreenShot/index.module.css
.wrapper {
  background-color: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 0;
  appearance: none;
  display: block;
  width: 100%;
  height: 100%;
}
.wrapper img {
  vertical-align: bottom;
  object-fit: cover;
  width: 100%;
  height: 100%;
}
.wrapper img:hover,
.wrapper img:focus {
  opacity: 0.6;
}

